Fix column spacing issues

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ li > a:link {
     grid-area: 2 / 1 / 3 / 3;
     margin: 0px 20px 0px;
     display: grid;
-    grid-template-columns: 2fr 7fr 2fr;
+    grid-template-columns: 2fr 6fr 4fr;
     grid-template-rows: 300px 50px 5fr 1fr;
     font-size: 0.8rem;
 }
@@ -137,7 +137,7 @@ li > a:link {
 
 .resume-section {
     display: grid;
-    grid-template-columns: 2fr 3fr 4fr 2fr;
+    grid-template-columns: 2fr 2fr 4fr 4fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     row-gap: 8px;
 }
